# dafer-utils

./: Cargo.toml
dafer-utils/: Cargo.toml
dafer-utils-tauri/: Cargo.toml  tauri.conf.json
dafer-utils-tauri/frontend/: app.js  index.html  styles.css
dafer-utils-tauri/src/: lib.rs  main.rs
dafer-utils-ui/: Cargo.toml
dafer-utils-ui/src/: app.rs  enums.rs  main.rs  state.rs  ui.rs
dafer-utils-ui/src/ui/: load_preview.rs  main_ui.rs  modify.rs  visualize.rs
dafer-utils-ui/src/ui/palette/: gruvbox_material.rs  mod.rs
dafer-utils/src/: data_loader.rs  datasource.rs  execution.rs  lib.rs  operations.rs  persistence.rs  query_engine.rs
docs/: project_plan.md  project_plan_updated.md
src/: data_loader.rs
