[package]
name = "dafer-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
egui_plot = "0.34.0"

polars = { version = "0.52.0", features = ["fmt","parquet", "json", "lazy", "timezones", "polars-ops", "round_series", "strings"] }

anyhow = "1.0.100"

rfd = "0.16.0"

serde = "1.0.228"
serde_json = "1.0.145"

