[workspace]
members = [
    "dafer-utils",
    "dafer-utils-ui",
]

resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["dafer"]

[workspace.dependencies]
polars = { version = "0.52.0", features = ["fmt", "parquet", "json", "lazy", "timezones", "polars-ops", "round_series", "strings"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
csv = "1.4.0"
bincode = "1.3"
egui_plot = "0.34"
