[workspace]
members = [
    "dafer-utils",
    "dafer-utils-ui",
]

resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["dafer"]

[workspace.dependencies]
polars = { version = "0.53.0", features = ["fmt", "parquet", "json", "lazy", "timezones", "polars-ops", "round_series", "strings"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
csv = "1.4.0"
bincode = "3.0.0"
egui_plot = "0.34.1"
