[package]
name = "dafer-utils-tauri"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["dafer"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dafer-utils = { path = "../dafer-utils" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
polars = { version = "0.52.0", features = [
    "fmt",
    "parquet",
    "json",
    "lazy",
    "timezones",
    "polars-ops",
    "round_series",
    "strings",
] }
anyhow = "1"
chrono = "0.4"
bincode = "1.3"

[lib]
name = "dafer_utils_tauri_lib"
path = "src/lib.rs"

[[bin]]
name = "dafer-utils-tauri"
path = "src/main.rs"
